@@ -1101,12 +1101,6 @@ general {
 	max_targets = 4;
 
 	/*
-	 * client_flood: maximum amount of data in a clients queue before
-	 * they are dropped for flooding.
-	 */
-	client_flood = 2560 bytes;
-
-	/*
 	 * message_locale: the default message locale
 	 * Use "standard" for the compiled in defaults.
 	 * To install the translated messages, go into messages/ in the
