@@ -229,6 +229,13 @@ class {
 	 * they are dropped.
 	 */
 	sendq = 100 kbytes;
+
+	/*
+	 * recvq: maximum amount of data in a clients queue before they
+	 * are dropped for flooding. Defaults to 2560 if the chosen
+	 * value isn't within the range of 512 to 8000.
+	 */
+        recvq = 2560 bytes;
 };
 
 class {
@@ -1127,12 +1134,6 @@ general {
 	 * PRIVMSG/NOTICE.  Set to 999 NOT 0 for unlimited.
 	 */
 	max_targets = 4;
-
-	/*
-	 * client_flood: maximum amount of data in a clients queue before
-	 * they are dropped for flooding.
-	 */
-	client_flood = 2560 bytes;
 
 	/*
 	 * message_locale: the default message locale
