@@ -66,6 +66,7 @@ class {
 	number_per_ip = 2;
 	max_number = 100;
 	sendq = 100 kbytes;
+	recvq = 2560 bytes;
 };
 
 class {
@@ -74,6 +75,7 @@ class {
 	number_per_ip = 1;
 	max_number = 100;
 	sendq = 60kb;
+	recvq = 2560 bytes;
 };
 
 class {
@@ -301,7 +303,6 @@ general {
 	havent_read_conf = 1;
 
 	max_targets = 4;
-	client_flood = 2560;
 	message_locale = "standard";
 	oper_only_umodes = bots, cconn, debug, full, skill, nchange, 
                      rej, spy, external, operwall, locops, unauth;
