@@ -242,7 +242,7 @@ static struct NumericInfo replies[] = {
 /* 215 */  {"RPL_STATSILINE", ":%s 215 %s %c %s * %s@%s %d %s", NULL},
 /* 216 */  {"RPL_STATSKLINE", ":%s 216 %s %s %s * %s :%s | %s", NULL},
 /* 217 */  {"RPL_STATSQLINE", ":%s 217 %s %c %s :%s", NULL},
-/* 218 */  {"RPL_STATSYLINE", ":%s 218 %s %c %s %d %d %d %lu %d %d/%d %d/%d %s", NULL},
+/* 218 */  {"RPL_STATSYLINE", ":%s 218 %s %c %s %d %d %d %lu %lu %d %d/%d %d/%d %s", NULL},
 /* 219 */  {"RPL_ENDOFSTATS", ":%s 219 %s %c :End of /STATS report", NULL},
 /* 220 */  {"RPL_STATSPLINE", ":%s 220 %s %c %d %s %d %s :%s", NULL},
 /* 221 */  {"RPL_UMODEIS", ":%s 221 %s %s", NULL},
